# ha-vyloz-smeti

./: .gitignore  LICENSE  README.md  hacs.json  info.md  pyproject.toml  requirements_test.txt
.github/workflows/: lint.yml  release.yml  tests.yml  validate.yml
custom_components/vyloz_smeti/: __init__.py  api.py  calendar.py  config_flow.py  const.py  coordinator.py  manifest.json
custom_components/vyloz_smeti/translations/: en.json  sk.json
tests/: __init__.py  conftest.py  const.py  test_calendar.py  test_config_flow.py  test_coordinator.py  test_init.py
tests/fixtures/: locations.json  options.json  schedule_2026.json  schedule_2027.json
